# aite

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: release.yml
.github/workflows/: build-installers.yml  deploy-docs.yml  release.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/project-chat/: history-and-sessions.md  index.md  project-management.md  tools-and-controls.md  workspace-and-extensions.md
docs/quick-start/: auto-installation.md  claude-code-env.md  index.md  installation.md  (+1 more)
node-backend/: package-lock.json  package.json  tsconfig.json
scripts/: build-local-package.sh  build-macos-local.sh  sync-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs
src-tauri/src/claude/: cli_args.rs  cli_settings.rs  client.rs  factory.rs  message_normalizer.rs  mod.rs  permission_rules.rs  protocol.rs  provider_bridge.rs  server.rs  session.rs  session_file.rs  session_manager_trait.rs  session_registry.rs  session_wrapper.rs  stdin_session.rs  transport.rs
src-tauri/src/claude/process/: cli_process.rs  mod.rs  stdin_process.rs
src-tauri/src/claude/transports/: http_transport.rs  mod.rs  stdin_transport.rs  ws_transport.rs
src-tauri/src/commands/: claude.rs  cli.rs  config.rs  files.rs  git.rs  ide.rs  import.rs  mcp.rs  mod.rs  skills.rs  worktree.rs
src-tauri/src/commands/stats/: mod.rs  stats_cache.rs
src-tauri/src/models/: mod.rs
src-tauri/src/node/: mod.rs  process.rs  rpc.rs
(+89 files in other folders)
