[package]
name = "aite"
version = "0.1.1"
description = "Aite desktop application"
authors = ["GPT-5 Codex"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "7.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tokio-tungstenite = "0.26"
futures-util = "0.3"
shellexpand = "3.1"
http = "1.0"
bytes = "1.0"
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
url = "2.5"
git2 = { version = "0.19", default-features = false }
base64 = "0.22"
reqwest = "0.13.2"
flate2 = "1.1"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Transport layer dependencies
async-trait = "0.1"
thiserror = "2.0"

[patch.crates-io]
wry = { path = "../vendor/wry-0.54.1" }
